--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-Flask>=3.0.0
-Pillow>=10.0.0
-numpy>=1.24.0
-Werkzeug>=3.0.0
+Flask==3.0.0
+Flask-CORS==4.0.0
+Pillow==10.1.0
+numpy==1.24.3
+Werkzeug==3.0.1
+gunicorn==21.2.0
